# matchingdonors-social-agent

./: .dockerignore  .gitignore  Dockerfile  README  analytics_output.json  docker-compose.yml  package-lock.json  package.json  ready_to_publish.json  scraped_history.json  tsconfig.json
client/: package-lock.json  package.json
client/src/: App.tsx  apiClient.ts  index.css
client/src/components/: AnalyticsChart.tsx  Button.tsx  StatusBadge.tsx
client/src/styles/: themeTokens.css
data/: history.db  history.db-shm  history.db-wal
gateway/: .dockerignore  CMakeLists.txt  Dockerfile  config.json  main.cpp
gateway/include/: GatewayServer.hpp  ProxySession.hpp  SecurityEngine.hpp
gateway/src/: GatewayServer.cpp  ProxySession.cpp  SecurityEngine.cpp  main.cpp
k8s/: agent-service.yaml  agent-swarm.yaml  postgres.yaml
seo_tools/: Traffic_acquisition_Session_campaign.csv  inter_ga_gsc.py  query_ga.py  query_gsc.py  test_dry_run.py
src/: agent.ts  crawler.ts  geminiClient.ts  index.ts  reviewQueue.ts  server.ts  testArticleRevevance.ts  testBackoff.ts  testBanditLoop.ts  testCommunityListening.ts  testSanitizer.ts  types.ts
src/services/: BanditService.ts  CrawlerManager.ts  CronService.ts  ExperimentService.ts  HistoryService.ts  QueueService.ts  aiService.ts  articleRelevanceService.ts  communityListeningService.ts  communityListeningService.ts.ts  ga4Sanitizer.ts  postEngagementService.ts  socialService.ts  urlService.ts
src/services/crawler/: BaseCrawler.ts  DailyDiabetesCrawler.ts  DailyTransplantCrawler.ts  IrishTransplantCrawler.ts  OptnCrawler.ts  (+4 more)
(+2 files in other folders)
